--- a/day2 CSS:HTML/Portfolio.htm
+++ b/day2 CSS:HTML/Portfolio.htm
@@ -26,23 +26,23 @@
     <p class="job">Relevant Experience</p>
     <ul>
       <li>
-        <p class="job">Web Developer,</p><p> Relaxr <small>2015 - present</small></p>
+        <span><b>Web Developer,</b> Relaxr <small>2015 - present</small></span>
         <div>
           Developed a multi-column layout blog, landing page, and contact forms that render on mobile devices.
         </div>
-        <img src="images/citipix.png">
+        <img class="portfolio" src="images/citipix.png">
       </li>
       <li>
-        <p class="job">Web Developer,</p><p> Startup Matchmaker <small>2015 - present</small></p>
+        <span><b>Web Developer,</b> Startup Matchmaker <small>2015 - present</small></span>
         <div>
           Used a design team's wireframes to develop this company's responsive homepage.
         </div>
-        <img src="images/startup.png">
+        <img class="portfolio" src="images/startup.png">
       </li>
       <li>
-        <p class="job">Web Developer,</p><p> CitiPix <small>2015 – present</small></p>
+        <span><b>Web Developer,</b> CitiPix <small>2015 – present</small></span>
         <div>Built web app prototype that allows users to store and quickly retrieve photos using keywords.</div>
-        <img src="images/relaxr.png">
+        <img class="portfolio" src="images/relaxr.png">
       </li>
     </ul>
 </article>
