boxing and convention practice

--- a/day2 CSS:HTML/About.htm
+++ b/day2 CSS:HTML/About.htm
@@ -8,32 +8,45 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a id="curPage" href="About.htm">About Me</a> |
-      <a href="Portfolio.htm">Portfolio</a>
-    </nav>
-    <div id="name">JOE JOHNSON</div>
-  </header>
 
-  <section>
-    <article class="left">
-      <h2>ENJOY LIFE AS A DEVELOPER</h2>
-      <div>
-        I'm Joe Johnson, a Developer based in NYC. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.
+  <div class="wrapper">
+
+    <header>
+      <nav>
+        <ul>
+          <li><a id="curPage" href="About.htm">About Me</a></li>
+          <li>|</li>
+          <li><a href="Portfolio.htm">Portfolio</a></li>
+        </ul>
+      </nav>
+      <h1>joe johnson</h1>
+    </header>
+
+    <main class="clearFloat">
+      <div class="leftWrap">
+        <h2>ENJOY LIFE AS A DEVELOPER</h2>
+        <p>I'm Joe Johnson, a Developer based in NYC. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
       </div>
-    </article>
-    <img class="right" id="avatar" src="images/avatar.png" alt="">
-  </section>
+      <div class="rightWrap">
+        <img id="avatar" src="./images/avatar.png" />
+      </div>
+    </main>
 
-  <footer>
-    <nav>
-      <a href="#">Facebook</a> |
-      <a href="#">Twitter</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">LinkedIn</a>
-    </nav>
-  </footer>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li>|</li>
+          <li><a href="#">Twitter</a></li>
+          <li>|</li>
+          <li><a href="#">Instagram</a></li>
+          <li>|</li>
+          <li><a href="#">LinkedIn</a></li>
+        </ul>
+      </nav>
+    </footer>
+
+  </div>
 </body>
 
 </html>
