--- a/day2 CSS:HTML/Portfolio.htm
+++ b/day2 CSS:HTML/Portfolio.htm
@@ -8,56 +8,62 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="About.htm">About Me</a> |
-      <a id="curPage" href="Portfolio.htm">Portfolio</a>
-    </nav>
-    <div id="name">JOE JOHNSON</div>
-  </header>
+  <div class="wrapper">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="About.htm">About Me</a></li>
+          <li>|</li>
+          <li><a id="curPage" href="Portfolio.htm">Portfolio</a></li>
+        </ul>
+      </nav>
+      <h1>joe johnson</h1>
+    </header>
 
-<section>
+    <main class="clearFloat">
+      <h2>Experience</h2>
+      <div>I recently graduated from a Front-End Web Development course at General Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an <b>awesome</b> Front-End Web Developer! During my spare time, I enjoy senior water aerobics, pickling,
+        and spending time with my goldfish, Jerry.</div>
+      <h3>Relevant Experience</h3>
+      <ul>
+        <li class="portfolio">
+          <span><b>Web Developer,</b> Relaxr <small>2015 - present</small></span>
+          <p>Developed a multi-column layout blog, landing page, and contact forms that render on mobile devices.</p>
+          <div>
+            <img src="images/citipix.png">
+          </div>
+        </li>
+        <li class="portfolio">
+          <span><b>Web Developer,</b> Startup Matchmaker <small>2015 - present</small></span>
+          <p>Used a design team's wireframes to develop this company's responsive homepage.</p>
+          <div>
+            <img src="images/startup.png">
+          </div>
+        </li>
+        <li class="portfolio">
+          <span><b>Web Developer,</b> CitiPix <small>2015 – present</small></span>
+          <p>Built web app prototype that allows users to store and quickly retrieve photos using keywords.</p>
+          <div>
+            <img src="images/relaxr.png">
+          </div>
+        </li>
+      </ul>
+    </main>
 
-
-<article>
-    <h2>Experience</h2>
-    <div>I recently graduated from a Front-End Web Development course at General Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an <b>awesome</b> Front-End Web Developer! During my spare time, I enjoy senior water aerobics, pickling, and spending
-      time with my goldfish, Jerry.</div>
-    <p class="job">Relevant Experience</p>
-    <ul>
-      <li>
-        <span><b>Web Developer,</b> Relaxr <small>2015 - present</small></span>
-        <div>
-          Developed a multi-column layout blog, landing page, and contact forms that render on mobile devices.
-        </div>
-        <img class="portfolio" src="images/citipix.png">
-      </li>
-      <li>
-        <span><b>Web Developer,</b> Startup Matchmaker <small>2015 - present</small></span>
-        <div>
-          Used a design team's wireframes to develop this company's responsive homepage.
-        </div>
-        <img class="portfolio" src="images/startup.png">
-      </li>
-      <li>
-        <span><b>Web Developer,</b> CitiPix <small>2015 – present</small></span>
-        <div>Built web app prototype that allows users to store and quickly retrieve photos using keywords.</div>
-        <img class="portfolio" src="images/relaxr.png">
-      </li>
-    </ul>
-</article>
-
-  </section>
-
-  <footer>
-    <nav>
-      <a href="#">Facebook</a> |
-      <a href="#">Twitter</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">LinkedIn</a>
-    </nav>
-  </footer>
-
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li>|</li>
+          <li><a href="#">Twitter</a></li>
+          <li>|</li>
+          <li><a href="#">Instagram</a></li>
+          <li>|</li>
+          <li><a href="#">LinkedIn</a></li>
+        </ul>
+      </nav>
+    </footer>
+  </div>
 </body>
 
 </html>
