--- a/day3 Bootstrap/index.html
+++ b/day3 Bootstrap/index.html
@@ -19,199 +19,76 @@
   <main>
 
     <!-- section 1 -->
-    <section class="container-fluid">
-      <article class="row section1 hidden-xs">
-        <div class="mainLeft col-xs-12 col-sm-7 col-md-8">
-          <div class="inside2">
+    <section class="container-fluid section1">
+      <article class="row">
 
-          </div>
+        <div class="main col-md-8 col-sm-7 hidden-xs">
+          <div class="mainImg1"></div>          
         </div>
-        <div class="mainRight col-xs-12 col-sm-5 col-md-4">
-          <div class="inside1">
 
-          </div>
-          <div class="inside1">
-
-          </div>
+        <div class="main col-md-4 col-sm-5">
+            <div class="mainImg2 col-md-12"></div>
+            <div class="mainImg3 col-md-12"></div>
+            <div class="mainImg1 visible-xs"></div>
         </div>
-      </article>
-      <article class="row section11 visible-xs">
-        <div class="inside1">
 
-        </div>
-        <div class="inside1">
 
-        </div>
-        <div class="inside1">
 
-        </div>
       </article>
     </section>
 
+
+
     <!-- section2 -->
-    <section class="second container">
-      <article class="row thumb col-sm-10 col-sm-offset-1">
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
+    <section class="container section2">
+
+      <!-- thumbnail row -->
+      <article class="row">
+
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
+
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
+        <div class="thumb col-md-3 col-sm-4 col-xs-12">
+          <div class="cover"></div>
+          <h4>Hello.This is bootstrap practices</h4>
+          <div class="content">Vivamus ugue laoreet rutrumnas faucibus mollis interdum.</div>
         </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
-        </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
-        </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
-        </div>
-        <div class="hidden-xs col-sm-4 col-md-3">
-          <div class="thumbnail">
-            <img class="thumbImg img-responsive" src="./images/thumb.png" alt="...">
-            <div class="caption">
-              <h3>This is bootstrap</h3>
-              <p>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row medias visible-xs">
-          <div class="medLeft col-xs-2">
-            <a href="#">
-              <img class="" src="./images/thumb.png" alt="...">
-            </a>
-          </div>
-          <div class="medBody col-xs-10">
-            <h4 class="">This is bootstrap</h4>
-            <div>Cras justo odio, dapiet quam. Cras mattis consectetur purus sit amet fermentum.</div>
-          </div>
-        </div>
+
       </article>
+
     </section>
     <!-- section2 ends -->
   </main>
