--- a/day3 Bootstrap/index.html
+++ b/day3 Bootstrap/index.html
@@ -16,28 +16,106 @@
 
 <body>
 
-  <main>
+<!-- NavBar -->
+  <nav class="navbar navbar-inverse" role="navigation">
+      <div class="container">
+          <div class="navbar-header">
+              <button
+                  type="button"
+                  class="navbar-toggle collapsed"
+                  data-toggle="collapse"
+                  data-target="#navbar"
+                  aria-expanded="false"
+                  aria-controls="navbar">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
 
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                  <li class="active">
+                      <a href="#">
+                          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                          Home
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                          About
+                      </a>
+                  </li>
+                  <li class="dropdown">
+                      <a
+                          href="#"
+                          class="dropdown-toggle"
+                          data-toggle="dropdown"
+                          role="button"
+                          aria-haspopup="true"
+                          aria-expanded="false">
+                          <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+                          Test
+                          <span class="caret"></span>
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li>
+                              <a href="#">Html</a>
+                          </li>
+                          <li>
+                              <a href="#">CSS</a>
+                          </li>
+                          <li>
+                              <a href="#">JS</a>
+                          </li>
+                          <li>
+                              <a href="#">Rudy</a>
+                          </li>
+                          <li role="separator" class="divider"></li>
+                          <li class="dropdown-header">Specials</li>
+                          <li>
+                              <a href="#">Node.js</a>
+                          </li>
+                          <li>
+                              <a href="#">Angular</a>
+                          </li>
+                      </ul>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <i class="fa fa-envelope-o"></i>
+                          Contact
+                      </a>
+                  </li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  <li>
+                      <a href="#">Sign in</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+
+  <main>
     <!-- section 1 -->
     <section class="container-fluid section1">
       <article class="row">
 
         <div class="main col-md-8 col-sm-7 hidden-xs">
-          <div class="mainImg1"></div>          
+          <div class="mainImg1"></div>
         </div>
 
         <div class="main col-md-4 col-sm-5">
-            <div class="mainImg2 col-md-12"></div>
-            <div class="mainImg3 col-md-12"></div>
-            <div class="mainImg1 visible-xs"></div>
+          <div class="mainImg2 col-md-12"></div>
+          <div class="mainImg3 col-md-12"></div>
+          <div class="mainImg1 visible-xs"></div>
         </div>
-
-
 
       </article>
     </section>
-
-
 
     <!-- section2 -->
     <section class="container section2">
