--- a/day8 jQuery practice/index.html
+++ b/day8 jQuery practice/index.html
@@ -13,11 +13,14 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/custom.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
+
+  <link href="css/custom.css" rel="stylesheet" />
 </head>
 
 <body>
+  <!-- header -->
   <header class="container">
     <div class="row">
       <div class="headerTitle col-xs-12">
@@ -30,35 +33,57 @@
     <!-- Shopping List -->
     <section class="container" id="itemList">
       <div class="row listedItem">
-        <div class="itemName col-xs-4">
+        <div class="itemName col-xs-3 col-md-4">
           Coffee</div>
-        <div class="unitPrice col-xs-3">
+        <div class="unitPrice col-xs-2 col-md-3">
           $20.00
         </div>
-        <div class="itemQty col-xs-3">
-          <label for="qty">QTY</label>
-          <input type="text" class="qty" value="0">
-          <button type="button" class="removeItem">Cancel</button>
+        <div class="itemQty col-xs-3 col-md-3">
+          <div class="input-group">
+            <span class="input-group-addon">QTY</span>
+            <input type="number" min="1" class="qty form-control" value="0" />
+          </div>
         </div>
-        <div class="subTotal col-xs-2">
+        <div class="subTotal col-xs-2 col-md-1">
           $0.00
         </div>
+        <i class="removeItem fa fa-trash fa-2x col-xs-2 col-md-1" aria-hidden="true"></i>
+      </div>
+      <div class="row listedItem">
+        <div class="itemName col-xs-3 col-md-4">
+          Salmon</div>
+        <div class="unitPrice col-xs-2 col-md-3">
+          $60.00
+        </div>
+        <div class="itemQty col-xs-3 col-md-3">
+          <div class="input-group">
+            <span class="input-group-addon">QTY</span>
+            <input type="number" min="1" class="qty form-control" value="0" />
+          </div>
+        </div>
+        <div class="subTotal col-xs-2 col-md-1">
+          $0.00
+        </div>
+        <i class="removeItem fa fa-trash fa-2x col-xs-2 col-md-1" aria-hidden="true"></i>
       </div>
       <!-- Added Items sit here -->
     </section>
     <!-- Shopping List Ends -->
 
     <!-- Item Adding Section-->
-    <section class="container addItem">
+    <section class="container" id="addItem">
       <div class="row createItem col-xs-12">
         <div class="addItemName col-xs-4">
-          <input type="text" id="addItemNameValue" placeholder="Item Name">
+          <input type="text" id="addItemNameValue" name="name" class="form-control" placeholder="Item Name" />
         </div>
         <div class="addItemPrice col-xs-3">
-          <input type="text" id="addItemPriceValue" placeholder="Price">
+          <div class="input-group">
+            <span class="input-group-addon">$</span>
+            <input type="number" min="0" id="addItemPriceValue" class="form-control" placeholder="Price" />
+          </div>
         </div>
         <div class="createItem col-xs-3">
-          <button type="button" id="createItemBtn" name="button">Create</button>
+          <button type="button" id="createItemBtn" class="btn btn-primary">Create</button>
         </div>
       </div>
       <div class="row calculate col-xs-3 col-xs-offset-9">
